CiliumGW/cilium_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-external
  labels:
    env: external
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      env: external
  listeners:
    - protocol: HTTP
      port: 80
      name: web-gw
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: shaarli-http
      hostname: shaarli.huntrrose.com
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-internal
  labels:
    env: internal
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      env: internal
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - protocol: HTTP
      port: 80
      name: web-gw
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS 
      port: 443
      name: https-gw
      allowedRoutes:
        namespaces:
          from: All
      
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: my-http-route
# spec:
#   parentRefs:
#     - name: my-gateway
#   rules:
#     - matches:
#       - path:
#           type: PathPrefix
#           value: /
#       backendRefs:
#         - name: test-service
#           port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: my-pdf-route
#   namespace: stirling-pdf
# spec:
#   parentRefs:
#     - name: my-gateway
#       namespace: default
#   rules:
#     - matches:
#       - path:
#           type: PathPrefix
#           value: /pdf
#       filters:
#         - type: URLRewrite
#           urlRewrite:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#       backendRefs:
#         - name: stirling-pdf2
#           port: 80


# apiVersion: v1
# kind: Namespace
# metadata:
#   name: cilium-gateway

# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: Gateway
# metadata:
#   name: home-gateway
#   # namespace: cilium-gateway
#   # labels:
#   #   app: home-gateway
#   #   env: gateway
# spec:
#   gatewayClassName: cilium
#   listeners:
#   - name: http
#     protocol: HTTP
#     port: 80
#     allowedRoutes:
#       namespaces:
#         from: All
# # ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: home-http-route
#   namespace: cilium-gateway
#   labels:
#     app: home-http-route
#     env: external
# spec:
#   parentRefs:
#   - name: home-gateway
#     namespace: cilium-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: stirling-pdf
#       namespace: stirling-pdf
#       port: 8080
